--- a/style.css
+++ b/style.css
@@ -4,22 +4,80 @@
     box-sizing: border-box;
 }
 
+body{
+    font-family: 'Open Sans', sans-serif;
+    margin: 5em auto;   
+}
+
 img{
     max-width: 100%;
     height: auto;
 }
 
+
+/******* typography *******/
+
+h1{
+    margin-top: 0;
+    font-weight: 800;
+    font-size: 2rem;
+}
+
+p{
+    font-weight: 400;
+    font-size: 0.9375rem;
+    color: #333;
+}
+
+.hero-subheading{
+    font-weight: 600;
+}
+
+.hero-description{
+    font-size: 0.8rem;
+}
+
+.review, .dispatched{
+    font-size: 0.7rem;
+}
+
+.review-span{
+    color: #1fa67a;
+}
+
+.rating i {
+    color: #1fa67a;
+}
+
+.submit-review{
+    font-size: 0.69rem;
+    text-decoration: underline;
+}
+
+.price{
+    font-weight: 600;
+    font-size: 1.5rem;
+}
+
+
+/****** hero section *******/
+
 .container{
     display: flex;
-    justify-content: space-around;
-    max-width: 980px;
+    justify-content: space-between;
+    align-items: center;
+    max-width: 900px;
     width: 90%;
     margin: 0 auto;
+    flex-wrap: wrap;
     /*outline: 3px solid magenta;*/
 }
 
 .hero-images{
     width: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .hero{
@@ -36,7 +94,10 @@ img{
     width: 20%;
 }
 
+/********* buttons ******/
+
 button{
+    cursor: pointer;
     background: white;
     border: 1px solid black;
     border-radius: .3em;
