--- a/style.css
+++ b/style.css
@@ -6,7 +6,8 @@
 
 body{
     font-family: 'Open Sans', sans-serif;
-    margin: 5em auto;   
+    margin: 5em auto;
+    background: rgb(253, 247, 247);
 }
 
 img{
@@ -18,7 +19,7 @@ img{
 /******* typography *******/
 
 h1{
-    margin-top: 0;
+    margin: 0;
     font-weight: 800;
     font-size: 2rem;
 }
@@ -108,4 +109,28 @@ button{
 .add-to-cart{
     background: black;
     color: white;
+}
+
+footer{
+    margin-top: 3em;
+    background: #fff;
+}
+
+.footer-container{
+    display: flex;
+    max-width: 900px;
+    justify-content: space-around;
+    margin: 0 auto;
+}
+
+.features{
+    width: 21%;
+}
+
+.features-heading{
+    font-weight: 600;
+}
+
+.feature-desc{
+    font-size: 0.8rem;
 }
