--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 
 body{
     font-family: 'Open Sans', sans-serif;
-    margin: 5em auto;
+    margin: 1em auto;
     background: rgb(253, 247, 247);
 }
 
@@ -65,9 +65,9 @@ p{
 
 .container{
     display: flex;
+    max-width: 900px;
     justify-content: space-between;
     align-items: center;
-    max-width: 900px;
     width: 90%;
     margin: 0 auto;
     flex-wrap: wrap;
@@ -103,7 +103,13 @@ button{
     border: 1px solid black;
     border-radius: .3em;
     padding: 1em;
-    margin-left: 1em;
+    margin-right: 1em;
+    transform: scale(1);
+    transition: transform 200ms ease-in;
+}
+
+button:hover{
+    transform: scale(1.1);
 }
 
 .add-to-cart{
@@ -118,9 +124,9 @@ footer{
 
 .footer-container{
     display: flex;
-    max-width: 900px;
     justify-content: space-around;
     margin: 0 auto;
+    width: 100%;
 }
 
 .features{
@@ -133,4 +139,36 @@ footer{
 
 .feature-desc{
     font-size: 0.8rem;
+}
+
+@media (max-width: 800px){
+
+    h1{
+        margin-top: 1em;
+    }
+
+    .hero-images{
+        width: 100%;
+    }
+    .hero{
+        width: 100%;
+    }
+}
+
+@media (max-width: 650px) {
+    .footer-container{
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    .features{
+        text-align: center;
+        width: 100%;
+    }
+
+    button{
+        font-size: 0.7rem;
+        padding: 0.7rem;
+    }
 }
